--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.14.2",
     "i": "^0.3.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
